# zero2prod

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  config.example.yaml  spec.yaml
.github/workflows/: rust.yml
configuration/: config.example.yaml  production.yaml
migrations/: 20230429131841_create_subscription_table.sql  20230628161859_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscription.rs  subscription_confirm.rs
