[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
config = "0.13.3"
uuid = { version = "1.3.2", features = ["v4"]}
chrono = "0.4.24"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
once_cell = "1.17.1"
secrecy = { version = "0.8.0", features = ["serde"]}
tracing-actix-web = "0.7.4"
serde-aux = "3.1"
unicode-segmentation = "1"
claim = "0.5"
validator = "0.16"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
rand = { version="0.8.5", features = ["std_rng"] }

[dependencies.sqlx]
version = "0.6.3"
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
fake = "2.6"
rand = "0.8.5"
quickcheck = "1"
quickcheck_macros = "1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
serde_json = "1"
linkify = "0.9.0"
